--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p class="note">Rellena la URL de tu WebApp de Google Apps Script (o cualquier endpoint que acepte JSON) y los campos que quieras enviar.</p>
 
     <label for="url">URL de la WebApp</label>
-    <input id="url" type="url" placeholder="" value="https://script.google.com/macros/s/AKfycbz3syJdQjAK1aBiPvgKoNmZe5gisMqEz6VSru7nA4kcpy-6AsE2G_gY_7Qqj-0eFcYQ/exec">
+    <input id="url" type="url" value="https://script.google.com/macros/s/AKfycbyosftut4BWS15Kkq8JI4fLfBTWvC9l_sK6OARpSv2gGvFT2eNsMnpCPDvRyP8QHG0Z/exec">
 
     <label for="cong">cong</label>
     <input id="cong" type="text" placeholder="Juan" value="Juan">
