--- a/index.html
+++ b/index.html
@@ -1,37 +1,24 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-<meta charset="UTF-8">
-<title>Enviar datos a Sheets</title>
-</head>
+<html>
 <body>
+  <button onclick="enviar()">Enviar</button>
 
-<input type="text" id="cong" placeholder="Cong">
-<select id="dispositivo">
-  <option value="B">B</option>
-  <option value="C">C</option>
-  <option value="D">D</option>
-</select>
-
-<button onclick="enviar()">Enviar</button>
-
-<div id="r"></div>
-
-<script>
-function enviar() {
-  const cong = document.getElementById("cong").value.trim();
-  const dispositivo = document.getElementById("dispositivo").value;
-
-  fetch("https://script.google.com/macros/s/AKfycbz4F_iVDOUrGn3j6UcKIrsg7WAN5xGVRwc8Lqua9An2zE1znx3D4qLU2JO8xDOY1oan/exec", {
-    method: "POST",
-    body: JSON.stringify({ cong, dispositivo }),
-    headers: { "Content-Type": "application/json" }
-  })
-  .then(r => r.json())
-  .then(r => document.getElementById("r").innerText = JSON.stringify(r))
-  .catch(err => document.getElementById("r").innerText = err);
-}
-</script>
-
+  <script>
+  function enviar() {
+    fetch("https://script.google.com/macros/s/AKfycbyyJ9GMaNQhoOj4IvHO5d06QuI6-7tG5M86BlUvCtfXsxNOgFUz1YJ-fnJ3I6XGGOUf/exec", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify({
+        cong: "A001",
+        dispositivo: "B"
+      })
+    })
+    .then(r => r.json())
+    .then(d => console.log(d))
+    .catch(err => console.error("ERROR:", err));
+  }
+  </script>
 </body>
 </html>
