--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ function enviar() {
   method: "POST",
   headers: { "Content-Type": "application/json" },
   body: JSON.stringify({
-    cong: "123",
-    dispositivo: "B"
+    cong: "SVN",
+    dispositivo: "D"
   })
 })
 .then(r => r.json())
