--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <option value="D">D</option>
 </select>
 
-<button onclick="enviar()">Enviar</button>
+<button onclick="enviar()">Enviaremos SVN y D</button>
 
 <pre id="r"></pre>
 
