--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <option value="D">D</option>
 </select>
 
-<button onclick="enviar()">Enviaremos SVN y D</button>
+<button onclick="enviar()">Enviaremos Otra cosa</button>
 
 <pre id="r"></pre>
 
 <script>
 function enviar() {
-  const cong = document.getElementById("cong").value.trim();
-  const dispositivo = document.getElementById("dispositivo").value;
+  //const cong = document.getElementById("cong").value.trim();
+  //const dispositivo = document.getElementById("dispositivo").value;
 
-  fetch("https://script.google.com/macros/s/AKfycbziEHJzFdFUmKmT2raBZT1RSRVWf3XEcqcZFt50ex_edy2O8fzcHY8gfr3Fw2KzaT8c/exec", {
+  fetch("https://script.google.com/macros/s/AKfycbyaQtGhmbPWJQ40sO1B5ZN8Wm20jVOzQJaA7RKjL-PcY2jhXZgWNdtMLWPRnXJswSnF/exec", {
   method: "POST",
   headers: { "Content-Type": "application/json" },
   body: JSON.stringify({
