--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>
   body { font-family: Arial; padding: 20px; }
   #modalreporte { 
-    display: none; 
+    /*display: none; */
     position: fixed; 
     top: 20%; left: 50%; transform: translateX(-50%);
     background: #fff; padding: 20px; border-radius: 10px;
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<button onclick="AbrirModalReporte()">Cargar Predicado</button>
+<!--<button onclick="AbrirModalReporte()">Cargar Predicado</button>-->
 
 <div id="modalreporte">
   <h3>Enviar reporte de predicado</h3>
@@ -28,7 +28,7 @@
   <input type="text" id="dispositivo" placeholder="Territorio"><br><br>
 
   <button id="btnenviar">Enviar</button>
-  <button onclick="CerrarModalReporte()">Cerrar</button>
+  <!--<button onclick="CerrarModalReporte()">Cerrar</button>-->
 
   <p id="enviando" style="margin-top:10px;"></p>
 </div>
