--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 			justify-content: space-between;/* Separa los elementos */
 			align-items: center;           /* Alinea verticalmente al centro */
 			border: 1px solid #ccc;        /* Solo para visualizar el contenedor */
-			padding: 10px;
+			padding: 1px;
 		}
 		.contenedoralineado p {
 			margin: 0; /* Elimina márgenes por defecto */
@@ -520,7 +520,7 @@
 </header>
 <header>
 	<div id="texto_ayuda" class="contenedoralineado">
-		<p style="font-size:12px; color:blue;"><img src="images/flecha_izquierda.png" width="20" height="20"></img>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;¿Necesitás ayuda? Tocá las tres líneas en la parte superior de la barra izquierda</p>
+		<p style="font-size:12px; color:blue;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/flecha_izquierda.png" width="20" height="20"></img>&nbsp;&nbsp;Obtendrás ayuda al tocar las tres líneas de esta barra</p>
 		<p id="vermiubicacion"><a style="font-size:12px; color:blue;" href="javascript:CentrarMiUbicacion()"><img src="images/posicion.png" width="20" height="20"></img>Ver mi ubicación</a></p>
 	</div>
 </header>
@@ -554,9 +554,13 @@
 				<br></br>
                 <p class="lorem"><i class="fa-solid fa-house" style="color: #3f08f2;"></i>Te ayudará a encontrar la casa de un publicador</br>(En caso que estés registrado como usuario)</p>
 				<br></br>
-				<p class="lorem"><i class="fa-solid fa-gear" style="color: #3f08f2;"></i>Te permitirá acceder a las herramientas de configuración disponibles</p>
+				<p class="lorem"><i class="fa-solid fa-screwdriver-wrench" style="color: #3f08f2;"></i>Te permitirá acceder a las herramientas de configuración disponibles</p>
 				<br></br>
-                <p class="lorem"><i class="fa-solid fa-circle-info" style="color: #3f08f2;"></i>Te dará detalles sobre cómo usar cada herramienta</p>
+				<p class="lorem"><i class="fa-solid fa-calendar-days" style="color: #3f08f2;"></i>Consultá las salidas de cada día del mes</p>
+				<br></br>
+				<p class="lorem"><i class="fa-solid fa-pen-to-square" style="color: #3f08f2;"></i>Informá lo que se predicó o si encontraste un nuevo NO VISITAR</p>
+				<br></br>
+				<p class="lorem"><i class="fa-solid fa-circle-info" style="color: #3f08f2;"></i>Te dará detalles sobre cómo usar cada herramienta</p>
 				<br></br>
 				<p class="lorem"><i class="fa fa-user" style="color: #3f08f2;"></i>Sección para usuarios registrados</p>
 				<br></br>
